# sagemaker-studio-for-teams

./: .gitignore  Pipfile  README.md  setup.cfg
bastion/: bootstrap.tftpl  connect.sh  get_efs_ip.py  main.tf  outputs.tf  terragrunt.hcl  variables.tf
sagemaker_police/: main.tf  provider.tf  test_lambda.py  variables.tf
sagemaker_police/src/: sagemaker_police.py
sagemaker_studio/: add_efs_security_group.py  jupyter_lifecycle_config.tftpl  main.tf  outputs.tf  policies.tf  terragrunt.hcl  users.tf  variables.tf
sagemaker_studio/kernel_lifecycle_configs/: pipenv
src/clarity_sagemaker_studio/: __init__.py  sm_git_auth.py  sm_init_local.py  sm_start_local.py  sm_studio.py  utils.py
vpc/: main.tf  outputs.tf  variables.tf
