[metadata]
name = clarity_sagemaker_studio
version = attr: clarity_sagemaker_studio.VERSION
description = Tools to configure SageMaker Studio.
long_description = file: README.md
license = Proprietary
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir=
    =src
packages=find:
install_requires =
    boto3>=1.26.34
    debugpy>=1.6.7
scripts =
    bin/sm_init_docker
    bin/sm_init_sm
    bin/sm_start_sm

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sm_init_local = clarity_sagemaker_studio.sm_init_local:main
    sm_git_auth = clarity_sagemaker_studio.sm_git_auth:main
    sm_start_local = clarity_sagemaker_studio.sm_start_local:main
    sm_studio = clarity_sagemaker_studio.sm_studio:main
